# Calibration

./: README.md
hands_on_calibration/: CMakeLists.txt  package.xml
hands_on_calibration/launch/: move_pose.launch
hands_on_calibration/src/: move_pose.cpp
hands_on_ur5_description/: CMakeLists.txt  package.xml
hands_on_ur5_description/launch/: hands_on_ur5.launch
hands_on_ur5_description/urdf/: hands_on_ur5.gazebo  hands_on_ur5.urdf.xacro
hands_on_ur5_description/worlds/: checker_wrorld.world
hands_on_ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
hands_on_ur5_moveit_config/config/: fake_controllers.yaml  hands_on_ur5.srdf  kinematics.yaml  ompl_planning.yaml
hands_on_ur5_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  hands_on_ur5_moveit_controller_manager.launch.xml  hands_on_ur5_planning_exectuion.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
hands_on_ur5_moveit_config/script/: calibration.py  calibration_video.py  cam_test.py  extrinsic_calibration.py  extrinsic_test.py  joint_goal.py  move_position_2_calibration.py  save_img.py  take_ds_atuo.py
